--- a/analise_churn.ipynb
+++ b/analise_churn.ipynb
@@ -303,9 +303,17 @@
    "source": [
     "## Minhas Conclusões e Próximos Passos\n",
     "\n",
-    "> Conclusões Pessoais: \"[Aqui vou escrever, com minhas palavras, o que mais aprendi neste projeto. Por exemplo, a importância de não confiar no primeiro modelo e como o tratamento do desbalanceamento de dados foi crucial para gerar um resultado de negócio útil.]\"\n",
+    "> Conclusões Pessoais: No início do projeto, o primeiro modelo que treinei apresentou uma acurácia de 80%, o que inicialmente parecia um ótimo resultado. No entanto, o que eu aprendi foi que uma única métrica, como a acurácia, pode ser enganosa, especialmente em problemas de negócio como este.
+
+A lição mais importante para mim foi quando analisei a métrica de Recall e percebi que o modelo estava falhando em identificar 43% dos clientes que realmente cancelariam. Entendi que, para a empresa, era muito mais valioso identificar corretamente um cliente em risco (alto Recall) do que apenas acertar a previsão geral. Foi nesse momento que o foco do projeto mudou de "criar um modelo preciso" para "criar um modelo útil".
+
+A decisão de aplicar a técnica de class_weight para tratar o desbalanceamento dos dados foi o ponto de virada. Ao fazer isso, consegui elevar o Recall para 80%, transformando o modelo de uma curiosidade estatística para uma ferramenta de negócio realmente útil, capaz de guiar ações proativas de retenção e potencialmente salvar uma receita significativa para a empresa.
     "\n",
-    "> Próximos Passos Sugeridos: \"[Aqui vou sugerir o que eu faria a seguir se este fosse um projeto real na empresa. Por exemplo, testar o modelo com dados mais recentes, criar um dashboard para monitorar as previsões ou trabalhar com a equipe de marketing para criar a campanha de retenção.]\""
+    "> Próximos Passos Sugeridos: Monitoramento e Operacionalização: O próximo passo natural seria implementar este modelo em um ambiente de produção. Uma sugestão seria criar um dashboard (em Power BI, por exemplo) que consumisse as previsões do modelo e mostrasse para a equipe de negócio, de forma diária ou semanal, a lista de clientes com maior risco de churn.
+
+Colaboração Interdepartamental: Com essa lista em mãos, eu recomendaria trabalhar diretamente com a equipe de Marketing para desenhar e executar campanhas de retenção direcionadas, como oferecer um desconto ou um benefício específico para os clientes identificados pelo modelo.
+
+Melhoria Contínua: Por fim, seria crucial monitorar a performance do modelo ao longo do tempo (uma prática conhecida como MLOps) para garantir que ele continue preciso à medida que novos dados chegam, e re-treiná-lo periodicamente para capturar novas tendências de comportamento dos clientes.
    ]
   }
  ],
